# police_data_extract

./: .gitignore  README.md  app.py  config.json  pyproject.toml
police_data/: __init__.py
police_data/src/: extract_reports.py
police_data/src/bigquery/: bq_config.json
police_data/src/bigquery/common/: configs.py  table_checks.py
police_data/src/bigquery/prod/: insert.py  prod_schema.json
police_data/src/bigquery/stg/: insert.py  staging_schema.json
police_data/src/extract/: extract.json  extract_data.py
police_data/src/extract/common/: __init__.py  file_manipulation.py  transformations.py
police_data/src/gcs/: upload.json  upload_data.py
police_data/src/postgre/: db_config.json  upload_to_prod.py
police_data/src/postgre/create_tables/: create_prod_table.py
police_data/utils/: utils.py
